# py-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/__PKG_NAME__/: cli.py
tests/: test_cli.py
