[project]
name = "__APP_NAME__"
version = "0.1.0"
description = "Starter for __APP_NAME__"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
__APP_NAME__ = "__PKG_NAME__.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
